# generate-names

./: .gitignore  LICENSE  README.md  pyproject.toml
generate-names/: __init__.py
