[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generate-names"
version = "0.1.1"
description = "A simple library to generate random names based on US census data."
license-files = ["MIT"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
names = ["data/*"]